--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,7 +9,9 @@
           "src/config/**",
           "src/controllers/**",
           "src/middlewares/**",
-          "src/routes/**"
+          "src/routes/**",
+          "src/libs/**",
+          "src/model/**"
         ]
       }
     }
