--- a/backend/package.json
+++ b/backend/package.json
@@ -12,17 +12,17 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
-    "@stream-io/node-sdk": "^0.7.27",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "inngest": "^3.48.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
+    "multer": "^2.0.2",
     "redis": "^5.10.0",
-    "stream-chat": "^9.27.2"
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
