--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,20 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
+    "openai": "^6.15.0",
+    "rate-limit-redis": "^4.3.1",
     "redis": "^5.10.0",
     "streamifier": "^0.1.1"
   },
