--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "openai": "^6.15.0",
     "rate-limit-redis": "^4.3.1",
     "redis": "^5.10.0",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "stripe": "^20.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
